migration - java 11 to 21, springboot 2.6 to 3.2
Signed-off-by: Sachin Rana <sacrana324@gmail.com>