@@ -26,14 +26,14 @@ import io.mosip.esignet.core.util.IdentityProviderUtil;
 import lombok.extern.slf4j.Slf4j;
 import net.minidev.json.JSONObject;
 import org.jose4j.keys.X509Util;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.security.*;
@@ -52,7 +52,7 @@ import java.util.Arrays;
 import java.util.Collections;
 
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 @Slf4j
 public class ConsentHelperServiceTest {
 
@@ -80,48 +80,49 @@ public class ConsentHelperServiceTest {
 
     static {
         try {
-            jwksString="{ \"keys\": [ { \"p\": \"-lDLpWmbDNnAb6QEvY_1-WQLnAzJqjgAnCDIitaTSchJZWU6OHuGbLnwRGx-u86sPqk7V9KyudNxDTX9FCVNye2i5Rv4Ky0F29qiXT-xKNHa64xvFQ9imhFqZUL1-wQfJryVe_tR5Cxf45onFsT-BqeXLJqrgIpeCsHY1WOcxq0\", \"kty\": \"RSA\", \"q\": \"25GP6Hw-Xjj_A9M-dvKFTMPEI4rKUjznEAiro2TqSWM890XQiTuL92GCmTnDhG1RalTyQrED2pC0zwlhLnjuxPJTFjbxIoFfzWgf2o7sujmezDjahflB_1S2UmF2rc1HA0veCyb8d7rEcfX_D-gK8j2_7zcHKFUAY7amWQpFnQc\", \"d\": \"dj5vOzlQKJNQ_CKlhvbexsGA-GSyGFKkEJE9ZvwMFb1RkWq3PeImssKgigQgwUEcsAMDGBMDJBkjJXQ0w-DJB_nnnRqmtJpRESz-m118sHxgbOT1KMbd9mMWm5ElMm-gywD-rI7gCWStIbM9-X9K9HVpVRL9ZnR7Vq6mmOD3oCDDGNMXAEbPqhyeffCAzz4sCGm68W79xVf6N5zGNgpLwBx1U-ytoL49ljfO9CjMYHHLd9WIuFjRvebudAtmPL5dDuT6w3X81l8Uk0dvCYq9q0k6qbM9CgQuEVbEZYYB0clehcXDuMfotcq8dZTSh-x55Hr7WP3jP8Wmbq7Hb_9D-Q\", \"e\": \"AQAB\", \"use\": \"sig\", \"qi\": \"7UN1qEDk2-9vNglyoG9s3Y7HTXyJRQTd9gSF_xnlX9V2xwHFyzrBvQXEpmgcqUmd_d1Nwii0F6FIPDO2imewf05EDAzgQ0z7JfW5A28Cu7dgrTafw9wNwnhxX6XvQJN9d1mB1CGXvu6hjfmJf2d3w8Zx3S9ftHJfiJdYiovz2a4\", \"dp\": \"3Wb_aVSKVwh3RIfvxXeDGk5aUnGhIhUcvPvmRZ9bcaRc_vlVUMY5dQvVr7_DLPy1r0rieWCcwu55jTTWn64LKvMs5Lcjf5T4HKk6eX4vhapwl22Ehz0vepSy5dQfXCIeJ5YgJiR6H3b8bYVY07Pz-BDeDw7TaQN6AMvKrZvI_JU\", \"alg\": \"RS256\", \"dq\": \"fE2F-QoNjO4bgSDgZhqaWIEj0zNJoxEThsJB2TjSYkWqSBrgGjD55kzv0KshAyGYS-hXVmY8VkpB8kvPFq4kDp9ZZmQoU26GvBTMo8DyR-NDAT7Wh647LL_aj_zZYT-rijQzOoERwP6dJB8uDOVC_Sz0MgsnJDArDkhjGFl2W5U\", \"n\": \"1rFysE5-hwy2qvd3KBT6OzHzJdmIyLhR5bmO4L1qxkVQ78Danse9etQSY1c_v8jVvpA9IUVsAPdvIore4t5L2foqydn4H0VBQOcnX1f-6FcZ3_6nH5GFGQIVyuBPO7d7XM1vn8DEt3FY5-VGB0kpSHcxfLGVL0F7jPm31rDYaTROevkeIaMIib0tvMZpoxP7e9yfpix7L5p3-vLtcvpZk1hFiROa1m0nnpNg6k7-HunLMJV0UGOtYgDwmj_Fow56N26AGLzdVxpz-mjBu5RFZwCJba56mE7d77nndEUbiweYrOXIY04mUye55sU7-svOXprq925ckfRlAwUWLcKHuw\" } ] }";
-            certificateString="-----BEGIN CERTIFICATE-----\n" +
-                    "MIIC6jCCAdKgAwIBAgIGAYlTAszKMA0GCSqGSIb3DQEBCwUAMDYxNDAyBgNVBAMM\n" +
-                    "K1c0bVhHakV4VU9YUl9Pc0dqUzRDUzR0N1VlRkZReE5yZXo1d05DRE1FY0UwHhcN\n" +
-                    "MjMwNzE0MDYwNzE5WhcNMjQwNTA5MDYwNzE5WjA2MTQwMgYDVQQDDCtXNG1YR2pF\n" +
-                    "eFVPWFJfT3NHalM0Q1M0dDdVZUZGUXhOcmV6NXdOQ0RNRWNFMIIBIjANBgkqhkiG\n" +
-                    "9w0BAQEFAAOCAQ8AMIIBCgKCAQEA1rFysE5+hwy2qvd3KBT6OzHzJdmIyLhR5bmO\n" +
-                    "4L1qxkVQ78Danse9etQSY1c/v8jVvpA9IUVsAPdvIore4t5L2foqydn4H0VBQOcn\n" +
-                    "X1f+6FcZ3/6nH5GFGQIVyuBPO7d7XM1vn8DEt3FY5+VGB0kpSHcxfLGVL0F7jPm3\n" +
-                    "1rDYaTROevkeIaMIib0tvMZpoxP7e9yfpix7L5p3+vLtcvpZk1hFiROa1m0nnpNg\n" +
-                    "6k7+HunLMJV0UGOtYgDwmj/Fow56N26AGLzdVxpz+mjBu5RFZwCJba56mE7d77nn\n" +
-                    "dEUbiweYrOXIY04mUye55sU7+svOXprq925ckfRlAwUWLcKHuwIDAQABMA0GCSqG\n" +
-                    "SIb3DQEBCwUAA4IBAQDEncAcwSkKRFClDkYw354hxbzc2zvtT9Foc4JNrKJhg+rI\n" +
-                    "toHtrc/GLd6dPokrgIcfJs9ogTL9gGrO70X8CXBDPgFzKueeZOEFZSGd9wzVYHeZ\n" +
-                    "aCQpv08+Xm9HGYJKN/V0SDU5n2K6qjIGc9vUa5wLYyngkK4akcOLDcs/JYUWmMFs\n" +
-                    "u758AsRhM5nen6DTqiYf2VEoVP5QTtG5LKP8xirlfdTwtzPK2UFBut5JLsExDIoT\n" +
-                    "e1dYNxoRM1wKr5rDMvuzu0+X2y5FRcT4qnxxi/BQfQ9pRbZGxJsNawsZf+IorpR8\n" +
-                    "RjPbLKozzWxtGPTbpYWX5gqptSa1YCRuKHNm2g3N\n" +
-                    "-----END CERTIFICATE-----";
+            jwksString = "{ \"keys\": [ { \"p\": \"-lDLpWmbDNnAb6QEvY_1-WQLnAzJqjgAnCDIitaTSchJZWU6OHuGbLnwRGx-u86sPqk7V9KyudNxDTX9FCVNye2i5Rv4Ky0F29qiXT-xKNHa64xvFQ9imhFqZUL1-wQfJryVe_tR5Cxf45onFsT-BqeXLJqrgIpeCsHY1WOcxq0\", \"kty\": \"RSA\", \"q\": \"25GP6Hw-Xjj_A9M-dvKFTMPEI4rKUjznEAiro2TqSWM890XQiTuL92GCmTnDhG1RalTyQrED2pC0zwlhLnjuxPJTFjbxIoFfzWgf2o7sujmezDjahflB_1S2UmF2rc1HA0veCyb8d7rEcfX_D-gK8j2_7zcHKFUAY7amWQpFnQc\", \"d\": \"dj5vOzlQKJNQ_CKlhvbexsGA-GSyGFKkEJE9ZvwMFb1RkWq3PeImssKgigQgwUEcsAMDGBMDJBkjJXQ0w-DJB_nnnRqmtJpRESz-m118sHxgbOT1KMbd9mMWm5ElMm-gywD-rI7gCWStIbM9-X9K9HVpVRL9ZnR7Vq6mmOD3oCDDGNMXAEbPqhyeffCAzz4sCGm68W79xVf6N5zGNgpLwBx1U-ytoL49ljfO9CjMYHHLd9WIuFjRvebudAtmPL5dDuT6w3X81l8Uk0dvCYq9q0k6qbM9CgQuEVbEZYYB0clehcXDuMfotcq8dZTSh-x55Hr7WP3jP8Wmbq7Hb_9D-Q\", \"e\": \"AQAB\", \"use\": \"sig\", \"qi\": \"7UN1qEDk2-9vNglyoG9s3Y7HTXyJRQTd9gSF_xnlX9V2xwHFyzrBvQXEpmgcqUmd_d1Nwii0F6FIPDO2imewf05EDAzgQ0z7JfW5A28Cu7dgrTafw9wNwnhxX6XvQJN9d1mB1CGXvu6hjfmJf2d3w8Zx3S9ftHJfiJdYiovz2a4\", \"dp\": \"3Wb_aVSKVwh3RIfvxXeDGk5aUnGhIhUcvPvmRZ9bcaRc_vlVUMY5dQvVr7_DLPy1r0rieWCcwu55jTTWn64LKvMs5Lcjf5T4HKk6eX4vhapwl22Ehz0vepSy5dQfXCIeJ5YgJiR6H3b8bYVY07Pz-BDeDw7TaQN6AMvKrZvI_JU\", \"alg\": \"RS256\", \"dq\": \"fE2F-QoNjO4bgSDgZhqaWIEj0zNJoxEThsJB2TjSYkWqSBrgGjD55kzv0KshAyGYS-hXVmY8VkpB8kvPFq4kDp9ZZmQoU26GvBTMo8DyR-NDAT7Wh647LL_aj_zZYT-rijQzOoERwP6dJB8uDOVC_Sz0MgsnJDArDkhjGFl2W5U\", \"n\": \"1rFysE5-hwy2qvd3KBT6OzHzJdmIyLhR5bmO4L1qxkVQ78Danse9etQSY1c_v8jVvpA9IUVsAPdvIore4t5L2foqydn4H0VBQOcnX1f-6FcZ3_6nH5GFGQIVyuBPO7d7XM1vn8DEt3FY5-VGB0kpSHcxfLGVL0F7jPm31rDYaTROevkeIaMIib0tvMZpoxP7e9yfpix7L5p3-vLtcvpZk1hFiROa1m0nnpNg6k7-HunLMJV0UGOtYgDwmj_Fow56N26AGLzdVxpz-mjBu5RFZwCJba56mE7d77nndEUbiweYrOXIY04mUye55sU7-svOXprq925ckfRlAwUWLcKHuw\" } ] }";
+            certificateString = """
+                    -----BEGIN CERTIFICATE-----
+                    MIIC6jCCAdKgAwIBAgIGAYlTAszKMA0GCSqGSIb3DQEBCwUAMDYxNDAyBgNVBAMM
+                    K1c0bVhHakV4VU9YUl9Pc0dqUzRDUzR0N1VlRkZReE5yZXo1d05DRE1FY0UwHhcN
+                    MjMwNzE0MDYwNzE5WhcNMjQwNTA5MDYwNzE5WjA2MTQwMgYDVQQDDCtXNG1YR2pF
+                    eFVPWFJfT3NHalM0Q1M0dDdVZUZGUXhOcmV6NXdOQ0RNRWNFMIIBIjANBgkqhkiG
+                    9w0BAQEFAAOCAQ8AMIIBCgKCAQEA1rFysE5+hwy2qvd3KBT6OzHzJdmIyLhR5bmO
+                    4L1qxkVQ78Danse9etQSY1c/v8jVvpA9IUVsAPdvIore4t5L2foqydn4H0VBQOcn
+                    X1f+6FcZ3/6nH5GFGQIVyuBPO7d7XM1vn8DEt3FY5+VGB0kpSHcxfLGVL0F7jPm3
+                    1rDYaTROevkeIaMIib0tvMZpoxP7e9yfpix7L5p3+vLtcvpZk1hFiROa1m0nnpNg
+                    6k7+HunLMJV0UGOtYgDwmj/Fow56N26AGLzdVxpz+mjBu5RFZwCJba56mE7d77nn
+                    dEUbiweYrOXIY04mUye55sU7+svOXprq925ckfRlAwUWLcKHuwIDAQABMA0GCSqG
+                    SIb3DQEBCwUAA4IBAQDEncAcwSkKRFClDkYw354hxbzc2zvtT9Foc4JNrKJhg+rI
+                    toHtrc/GLd6dPokrgIcfJs9ogTL9gGrO70X8CXBDPgFzKueeZOEFZSGd9wzVYHeZ
+                    aCQpv08+Xm9HGYJKN/V0SDU5n2K6qjIGc9vUa5wLYyngkK4akcOLDcs/JYUWmMFs
+                    u758AsRhM5nen6DTqiYf2VEoVP5QTtG5LKP8xirlfdTwtzPK2UFBut5JLsExDIoT
+                    e1dYNxoRM1wKr5rDMvuzu0+X2y5FRcT4qnxxi/BQfQ9pRbZGxJsNawsZf+IorpR8
+                    RjPbLKozzWxtGPTbpYWX5gqptSa1YCRuKHNm2g3N
+                    -----END CERTIFICATE-----""";
 
-            thumbprint=generateThumbprintByCertificate(certificateString);
+            thumbprint = generateThumbprintByCertificate(certificateString);
             JWKSet jwkSet = JWKSet.parse(jwksString);
             // Find the private key JWK for signing
-            JWK jwk = jwkSet.getKeys().get(0);
+            JWK jwk = jwkSet.getKeys().getFirst();
             privateKey = (RSAPrivateKey) jwk.toRSAKey().toPrivateKey();
-            certificate=IdentityProviderUtil.convertToCertificate(certificateString);
+            certificate = IdentityProviderUtil.convertToCertificate(certificateString);
 
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
 
-    @Before
-    public void setup()  {
-        ReflectionTestUtils.setField(consentHelperService,"objectMapper", new ObjectMapper());
+    @BeforeEach
+    public void setup() {
+        ReflectionTestUtils.setField(consentHelperService, "objectMapper", new ObjectMapper());
     }
 
     @Test
     public void addUserConsent_withValidLinkedTransaction_thenPass() throws Exception {
         OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setAuthTransactionId("123");
-        oidcTransaction.setAcceptedClaims(List.of("name","email"));
+        oidcTransaction.setAcceptedClaims(List.of("name", "email"));
         oidcTransaction.setPermittedScopes(null);
         oidcTransaction.setIndividualId("individualId");
         oidcTransaction.setConsentAction(ConsentAction.CAPTURE);
@@ -143,32 +144,32 @@ public class ConsentHelperServiceTest {
         claims.setUserinfo(userinfo);
         claims.setId_token(id_token);
 
-        oidcTransaction.setAcceptedClaims(Arrays.asList("name","email","gender"));
-        oidcTransaction.setPermittedScopes(Arrays.asList("openid","profile","email"));
-        oidcTransaction.setRequestedAuthorizeScopes(Arrays.asList("openid","profile","email"));
+        oidcTransaction.setAcceptedClaims(Arrays.asList("name", "email", "gender"));
+        oidcTransaction.setPermittedScopes(Arrays.asList("openid", "profile", "email"));
+        oidcTransaction.setRequestedAuthorizeScopes(Arrays.asList("openid", "profile", "email"));
         oidcTransaction.setResolvedClaims(claims);
 
-        List<String> acceptedClaims =oidcTransaction.getAcceptedClaims();
-        List<String> permittedScopes =oidcTransaction.getPermittedScopes();
+        List<String> acceptedClaims = oidcTransaction.getAcceptedClaims();
+        List<String> permittedScopes = oidcTransaction.getPermittedScopes();
         Collections.sort(acceptedClaims);
         Collections.sort(permittedScopes);
-        Map<String,Object> payLoadMap = new TreeMap<>();
-        payLoadMap.put("accepted_claims",acceptedClaims);
-        payLoadMap.put("permitted_authorized_scopes",permittedScopes);
+        Map<String, Object> payLoadMap = new TreeMap<>();
+        payLoadMap.put("accepted_claims", acceptedClaims);
+        payLoadMap.put("permitted_authorized_scopes", permittedScopes);
         String signature = generateSignature(payLoadMap);
         consentHelperService.updateUserConsent(oidcTransaction, signature);
         UserConsent userConsent = new UserConsent();
-        userConsent.setAuthorizationScopes(Map.of("openid",false,"profile",false,"email",false));
+        userConsent.setAuthorizationScopes(Map.of("openid", false, "profile", false, "email", false));
         userConsent.setHash("S91aCTTZ1NpJxXSvWf-wpW2xBjykRF77W3p0eHjmN1k");
         userConsent.setClaims(claims);
-        userConsent.setAcceptedClaims(List.of("email","gender","name"));
+        userConsent.setAcceptedClaims(List.of("email", "gender", "name"));
 
-        userConsent.setPermittedScopes(List.of("email","openid","profile"));
+        userConsent.setPermittedScopes(List.of("email", "openid", "profile"));
         userConsent.setSignature(signature);
 
         Mockito.verify(consentService).saveUserConsent(userConsent);
 
-        PublicKeyRegistry publicKeyRegistry =new PublicKeyRegistry();
+        PublicKeyRegistry publicKeyRegistry = new PublicKeyRegistry();
         publicKeyRegistry.setCertificate(certificateString);
 
 
@@ -179,7 +180,7 @@ public class ConsentHelperServiceTest {
     {
         OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setAuthTransactionId("123");
-        oidcTransaction.setAcceptedClaims(List.of("name","email"));
+        oidcTransaction.setAcceptedClaims(List.of("name", "email"));
         oidcTransaction.setPermittedScopes(null);
         oidcTransaction.setConsentAction(ConsentAction.CAPTURE);
         oidcTransaction.setConsentExpireMinutes(10);
@@ -209,7 +210,7 @@ public class ConsentHelperServiceTest {
         userConsent.setHash("N54bQaclZC0w91p-z6CY6hynD7GIOypYGVgTthMQxyo");
         userConsent.setClaims(claims);
         userConsent.setAuthorizationScopes(Map.of());
-        userConsent.setAcceptedClaims(List.of("name","email"));
+        userConsent.setAcceptedClaims(List.of("name", "email"));
         userConsent.setSignature("");
         userConsent.setExpiredtimes(LocalDateTime.now(ZoneOffset.UTC).plusMinutes(10).truncatedTo(ChronoUnit.SECONDS));
         Mockito.verify(consentService).saveUserConsent(userConsent);
@@ -218,7 +219,7 @@ public class ConsentHelperServiceTest {
     @Test
     public void addUserConsent_withValidWebTransactionNoClaimsAndScopes_thenPass()
     {
-        String clientId  = "clientId";
+        String clientId = "clientId";
         String psuToken = "psuToken";
         OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setAuthTransactionId("123");
@@ -238,11 +239,11 @@ public class ConsentHelperServiceTest {
     @Test
     public void processConsent_withWebFlowAndValidConsentAndGetConsentActionAsNoCapture_thenPass() throws Exception {
 
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
-        oidcTransaction.setRequestedAuthorizeScopes(List.of("openid","profile"));
-        oidcTransaction.setPermittedScopes(List.of("openid","profile"));
+        oidcTransaction.setRequestedAuthorizeScopes(List.of("openid", "profile"));
+        oidcTransaction.setPermittedScopes(List.of("openid", "profile"));
         oidcTransaction.setEssentialClaims(List.of("name"));
         oidcTransaction.setVoluntaryClaims(List.of("email"));
         oidcTransaction.setIndividualId("individualId");
@@ -259,7 +260,7 @@ public class ConsentHelperServiceTest {
         idTokenMap.put("value", "token");
         idTokenMap.put("values", new String[]{"value2a", "value2b"});
         userinfo.put("name", Arrays.asList(nameMap));
-        userinfo.put("email",null);
+        userinfo.put("email", null);
         id_token.put("idTokenKey", idTokenMap);
         claims.setUserinfo(userinfo);
         claims.setId_token(id_token);
@@ -273,7 +274,7 @@ public class ConsentHelperServiceTest {
         ConsentDetail consentDetail = new ConsentDetail();
         consentDetail.setClientId("123");
         consentDetail.setSignature("signature");
-        consentDetail.setAuthorizationScopes(Map.of("openid",false,"profile",false));
+        consentDetail.setAuthorizationScopes(Map.of("openid", false, "profile", false));
         Claims consentedClaims = new Claims();
         consentedClaims.setUserinfo(claims.getUserinfo());
         consentedClaims.setId_token(claims.getId_token());
@@ -281,47 +282,47 @@ public class ConsentHelperServiceTest {
         Map<String, Object> normalizedClaims = new HashMap<>();
         normalizedClaims.put("userinfo", consentHelperService.normalizeUserInfoClaims(claims.getUserinfo()));
         normalizedClaims.put("id_token", consentHelperService.normalizeIdTokenClaims(claims.getId_token()));
-        String hashCode =consentHelperService.hashUserConsent(normalizedClaims,consentDetail.getAuthorizationScopes());
+        String hashCode = consentHelperService.hashUserConsent(normalizedClaims, consentDetail.getAuthorizationScopes());
         consentDetail.setHash(hashCode);
 
-        consentDetail.setAcceptedClaims(Arrays.asList("email","gender","name"));
-        consentDetail.setPermittedScopes(Arrays.asList("email","openid","profile"));
+        consentDetail.setAcceptedClaims(Arrays.asList("email", "gender", "name"));
+        consentDetail.setPermittedScopes(Arrays.asList("email", "openid", "profile"));
 
         List<String> acceptedClaims = consentDetail.getAcceptedClaims();
         List<String> permittedScopes = consentDetail.getPermittedScopes();
         Collections.sort(acceptedClaims);
         Collections.sort(permittedScopes);
-        Map<String,Object> payLoadMap = new TreeMap<>();
-        payLoadMap.put("accepted_claims",acceptedClaims);
-        payLoadMap.put("permitted_authorized_scopes",permittedScopes);
+        Map<String, Object> payLoadMap = new TreeMap<>();
+        payLoadMap.put("accepted_claims", acceptedClaims);
+        payLoadMap.put("permitted_authorized_scopes", permittedScopes);
 
         String signature = generateSignature(payLoadMap);
         consentDetail.setSignature(signature);
         consentDetail.setPsuToken("psutoken");
 
-        PublicKeyRegistry publicKeyRegistry =new PublicKeyRegistry();
+        PublicKeyRegistry publicKeyRegistry = new PublicKeyRegistry();
         publicKeyRegistry.setCertificate(certificateString);
         Mockito.when(authorizationHelperService.getIndividualId(oidcTransaction)).thenReturn("individualId");
-        Mockito.when(publicKeyRegistryService.findFirstByIdHashAndThumbprintAndExpiredtimes(Mockito.any(),Mockito.any())).thenReturn(Optional.of(publicKeyRegistry));
+        Mockito.when(publicKeyRegistryService.findFirstByIdHashAndThumbprintAndExpiredtimes(Mockito.any(), Mockito.any())).thenReturn(Optional.of(publicKeyRegistry));
 
         Mockito.when(consentService.getUserConsent(userConsentRequest)).thenReturn(Optional.of(consentDetail));
 
-        consentHelperService.processConsent(oidcTransaction,true);
+        consentHelperService.processConsent(oidcTransaction, true);
 
-        Assert.assertEquals(oidcTransaction.getConsentAction(),ConsentAction.NOCAPTURE);
-        Assert.assertEquals(oidcTransaction.getAcceptedClaims(),consentDetail.getAcceptedClaims());
-        Assert.assertEquals(oidcTransaction.getPermittedScopes(),consentDetail.getPermittedScopes());
+        Assertions.assertEquals(oidcTransaction.getConsentAction(), ConsentAction.NOCAPTURE);
+        Assertions.assertEquals(oidcTransaction.getAcceptedClaims(), consentDetail.getAcceptedClaims());
+        Assertions.assertEquals(oidcTransaction.getPermittedScopes(), consentDetail.getPermittedScopes());
     }
 
     @Test
     public void processConsent_withLinkedFlowAndValidConsentAndGetConsentActionAsCapture_thenPass() throws Exception {
 
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
-        oidcTransaction.setRequestedAuthorizeScopes(List.of("openid","profile"));
+        oidcTransaction.setRequestedAuthorizeScopes(List.of("openid", "profile"));
         oidcTransaction.setIndividualId("individualId");
-        oidcTransaction.setPermittedScopes(List.of("openid","profile"));
+        oidcTransaction.setPermittedScopes(List.of("openid", "profile"));
         oidcTransaction.setEssentialClaims(List.of("name"));
         oidcTransaction.setVoluntaryClaims(List.of("email"));
         Claims claims = new Claims();
@@ -336,7 +337,7 @@ public class ConsentHelperServiceTest {
         idTokenMap.put("value", "token");
         idTokenMap.put("values", new String[]{"value2a", "value2b"});
         userinfo.put("name", Arrays.asList(nameMap));
-        userinfo.put("email",null);
+        userinfo.put("email", null);
         id_token.put("idTokenKey", idTokenMap);
         claims.setUserinfo(userinfo);
         claims.setId_token(id_token);
@@ -350,7 +351,7 @@ public class ConsentHelperServiceTest {
         ConsentDetail consentDetail = new ConsentDetail();
         consentDetail.setClientId("123");
         consentDetail.setSignature("signature");
-        consentDetail.setAuthorizationScopes(Map.of("openid",true,"profile",true));
+        consentDetail.setAuthorizationScopes(Map.of("openid", true, "profile", true));
 
         Map<String, Object> consentClaims = new HashMap<>();
         userinfo = new HashMap<>();
@@ -364,7 +365,7 @@ public class ConsentHelperServiceTest {
         idTokenMap.put("value", "token");
         idTokenMap.put("values", new String[]{"value2a", "value2b"});
         userinfo.put("gender", Arrays.asList(genderMap));
-        userinfo.put("email",null);
+        userinfo.put("email", null);
         id_token.put("idTokenKey", consentedIdTokenMap);
         consentClaims.put("userinfo", userinfo);
         consentClaims.put("id_token", id_token);
@@ -373,40 +374,40 @@ public class ConsentHelperServiceTest {
         consentDetail.setClaims(new Claims());
         consentDetail.getClaims().setUserinfo(userinfo);
         consentDetail.getClaims().setId_token(id_token);
-        String hashCode = consentHelperService.hashUserConsent(consentClaims,consentDetail.getAuthorizationScopes());
+        String hashCode = consentHelperService.hashUserConsent(consentClaims, consentDetail.getAuthorizationScopes());
         consentDetail.setHash(hashCode);
 
-        consentDetail.setAcceptedClaims(Arrays.asList("email","gender","name"));
-        consentDetail.setPermittedScopes(Arrays.asList("email","openid","profile"));
+        consentDetail.setAcceptedClaims(Arrays.asList("email", "gender", "name"));
+        consentDetail.setPermittedScopes(Arrays.asList("email", "openid", "profile"));
 
         List<String> acceptedClaims = consentDetail.getAcceptedClaims();
         List<String> permittedScopes = consentDetail.getPermittedScopes();
         Collections.sort(acceptedClaims);
         Collections.sort(permittedScopes);
-        Map<String,Object> payLoadMap = new TreeMap<>();
-        payLoadMap.put("accepted_claims",acceptedClaims);
-        payLoadMap.put("permitted_authorized_scopes",permittedScopes);
+        Map<String, Object> payLoadMap = new TreeMap<>();
+        payLoadMap.put("accepted_claims", acceptedClaims);
+        payLoadMap.put("permitted_authorized_scopes", permittedScopes);
 
         String signature = generateSignature(payLoadMap);
         consentDetail.setSignature(signature);
         consentDetail.setPsuToken("psutoken");
 
-        PublicKeyRegistry publicKeyRegistry =new PublicKeyRegistry();
+        PublicKeyRegistry publicKeyRegistry = new PublicKeyRegistry();
         publicKeyRegistry.setCertificate(certificateString);
         Mockito.when(authorizationHelperService.getIndividualId(oidcTransaction)).thenReturn("individualId");
-        Mockito.when(publicKeyRegistryService.findFirstByIdHashAndThumbprintAndExpiredtimes(Mockito.any(),Mockito.any())).thenReturn(Optional.of(publicKeyRegistry));
+        Mockito.when(publicKeyRegistryService.findFirstByIdHashAndThumbprintAndExpiredtimes(Mockito.any(), Mockito.any())).thenReturn(Optional.of(publicKeyRegistry));
 
         Mockito.when(consentService.getUserConsent(userConsentRequest)).thenReturn(Optional.of(consentDetail));
-        consentHelperService.processConsent(oidcTransaction,true);
+        consentHelperService.processConsent(oidcTransaction, true);
 
-        Assert.assertEquals(oidcTransaction.getConsentAction(),ConsentAction.CAPTURE);
+        Assertions.assertEquals(oidcTransaction.getConsentAction(), ConsentAction.CAPTURE);
 
     }
 
     @Test
-    public void processConsent_withEmptyConsent_thenPass(){
+    public void processConsent_withEmptyConsent_thenPass() {
 
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
         oidcTransaction.setVoluntaryClaims(List.of("email"));
@@ -418,40 +419,40 @@ public class ConsentHelperServiceTest {
 
         Mockito.when(consentService.getUserConsent(userConsentRequest)).thenReturn(Optional.empty());
 
-        consentHelperService.processConsent(oidcTransaction,true);
-        Assert.assertEquals(oidcTransaction.getConsentAction(),ConsentAction.CAPTURE);
+        consentHelperService.processConsent(oidcTransaction, true);
+        Assertions.assertEquals(oidcTransaction.getConsentAction(), ConsentAction.CAPTURE);
     }
 
     @Test
-    public void processConsent_withConsentPrompt_thenPass(){
+    public void processConsent_withConsentPrompt_thenPass() {
 
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
         oidcTransaction.setVoluntaryClaims(List.of("email"));
         oidcTransaction.setEssentialClaims(List.of());
         oidcTransaction.setRequestedAuthorizeScopes(List.of());
-        oidcTransaction.setPrompt(new String[] {"consent"});
+        oidcTransaction.setPrompt(new String[]{"consent"});
         UserConsentRequest userConsentRequest = new UserConsentRequest();
         userConsentRequest.setClientId(oidcTransaction.getClientId());
         userConsentRequest.setPsuToken(oidcTransaction.getPartnerSpecificUserToken());
 
         Mockito.when(consentService.getUserConsent(userConsentRequest)).thenReturn(Optional.empty());
 
-        consentHelperService.processConsent(oidcTransaction,true);
-        Assert.assertEquals(oidcTransaction.getConsentAction(),ConsentAction.CAPTURE);
+        consentHelperService.processConsent(oidcTransaction, true);
+        Assertions.assertEquals(oidcTransaction.getConsentAction(), ConsentAction.CAPTURE);
     }
 
     @Test
-    public void processConsent_withValidConsentAndConsentPrompt_thenPass(){
+    public void processConsent_withValidConsentAndConsentPrompt_thenPass() {
 
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
         oidcTransaction.setVoluntaryClaims(List.of("email"));
         oidcTransaction.setEssentialClaims(List.of());
         oidcTransaction.setRequestedAuthorizeScopes(List.of());
-        oidcTransaction.setPrompt(new String[] {"consent"});
+        oidcTransaction.setPrompt(new String[]{"consent"});
         UserConsentRequest userConsentRequest = new UserConsentRequest();
         userConsentRequest.setClientId(oidcTransaction.getClientId());
         userConsentRequest.setPsuToken(oidcTransaction.getPartnerSpecificUserToken());
@@ -459,18 +460,18 @@ public class ConsentHelperServiceTest {
         ConsentDetail consentDetail = new ConsentDetail();
         Mockito.when(consentService.getUserConsent(userConsentRequest)).thenReturn(Optional.of(consentDetail));
 
-        consentHelperService.processConsent(oidcTransaction,false);
-        Assert.assertEquals(oidcTransaction.getConsentAction(),ConsentAction.CAPTURE);
+        consentHelperService.processConsent(oidcTransaction, false);
+        Assertions.assertEquals(oidcTransaction.getConsentAction(), ConsentAction.CAPTURE);
     }
 
     @Test
     public void processConsent_withInvalidIdHashOrThumbPrint_thenPass() throws Exception {
 
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
-        oidcTransaction.setRequestedAuthorizeScopes(List.of("openid","profile"));
-        oidcTransaction.setPermittedScopes(List.of("openid","profile"));
+        oidcTransaction.setRequestedAuthorizeScopes(List.of("openid", "profile"));
+        oidcTransaction.setPermittedScopes(List.of("openid", "profile"));
         oidcTransaction.setEssentialClaims(List.of("name"));
         oidcTransaction.setVoluntaryClaims(List.of("email"));
         oidcTransaction.setIndividualId("individualId");
@@ -487,7 +488,7 @@ public class ConsentHelperServiceTest {
         idTokenMap.put("value", "token");
         idTokenMap.put("values", new String[]{"value2a", "value2b"});
         userinfo.put("name", Arrays.asList(nameMap));
-        userinfo.put("email",null);
+        userinfo.put("email", null);
         id_token.put("idTokenKey", idTokenMap);
         claims.setUserinfo(userinfo);
         claims.setId_token(id_token);
@@ -501,7 +502,7 @@ public class ConsentHelperServiceTest {
         ConsentDetail consentDetail = new ConsentDetail();
         consentDetail.setClientId("123");
         consentDetail.setSignature("signature");
-        consentDetail.setAuthorizationScopes(Map.of("openid",false,"profile",false));
+        consentDetail.setAuthorizationScopes(Map.of("openid", false, "profile", false));
         Map<String, Object> consentedClaims = new HashMap<>();
         consentedClaims.put("userinfo", claims.getUserinfo());
         consentedClaims.put("id_token", claims.getId_token());
@@ -509,40 +510,40 @@ public class ConsentHelperServiceTest {
         Map<String, Object>  normalizedClaims = new HashMap<>();
         normalizedClaims.put("userinfo", consentHelperService.normalizeUserInfoClaims(claims.getUserinfo()));
         normalizedClaims.put("id_token", consentHelperService.normalizeIdTokenClaims(claims.getId_token()));
-        String hashCode = consentHelperService.hashUserConsent(normalizedClaims,consentDetail.getAuthorizationScopes());
+        String hashCode = consentHelperService.hashUserConsent(normalizedClaims, consentDetail.getAuthorizationScopes());
         consentDetail.setHash(hashCode);
 
-        consentDetail.setAcceptedClaims(Arrays.asList("email","gender","name"));
-        consentDetail.setPermittedScopes(Arrays.asList("email","openid","profile"));
+        consentDetail.setAcceptedClaims(Arrays.asList("email", "gender", "name"));
+        consentDetail.setPermittedScopes(Arrays.asList("email", "openid", "profile"));
 
         List<String> acceptedClaims = consentDetail.getAcceptedClaims();
         List<String> permittedScopes = consentDetail.getPermittedScopes();
         Collections.sort(acceptedClaims);
         Collections.sort(permittedScopes);
-        Map<String,Object> payLoadMap = new TreeMap<>();
-        payLoadMap.put("accepted_claims",acceptedClaims);
-        payLoadMap.put("permitted_authorized_scopes",permittedScopes);
+        Map<String, Object> payLoadMap = new TreeMap<>();
+        payLoadMap.put("accepted_claims", acceptedClaims);
+        payLoadMap.put("permitted_authorized_scopes", permittedScopes);
 
         String signature = generateSignature(payLoadMap);
         consentDetail.setSignature(signature);
         consentDetail.setPsuToken("psutoken");
 
-        PublicKeyRegistry publicKeyRegistry =new PublicKeyRegistry();
+        PublicKeyRegistry publicKeyRegistry = new PublicKeyRegistry();
         publicKeyRegistry.setCertificate(certificateString);
         Mockito.when(authorizationHelperService.getIndividualId(oidcTransaction)).thenReturn("individualId");
-        Mockito.when(publicKeyRegistryService.findFirstByIdHashAndThumbprintAndExpiredtimes(Mockito.any(),Mockito.any())).thenReturn(Optional.empty());
+        Mockito.when(publicKeyRegistryService.findFirstByIdHashAndThumbprintAndExpiredtimes(Mockito.any(), Mockito.any())).thenReturn(Optional.empty());
 
         Mockito.when(consentService.getUserConsent(userConsentRequest)).thenReturn(Optional.of(consentDetail));
 
-        consentHelperService.processConsent(oidcTransaction,true);
+        consentHelperService.processConsent(oidcTransaction, true);
 
-        Assert.assertEquals(oidcTransaction.getConsentAction(),ConsentAction.CAPTURE);
+        Assertions.assertEquals(oidcTransaction.getConsentAction(), ConsentAction.CAPTURE);
     }
 
     @Test
-    public void processConsent_withInvalidSignature_thenFail(){
+    public void processConsent_withInvalidSignature_thenFail() {
 
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
         oidcTransaction.setVoluntaryClaims(List.of("email"));
@@ -552,22 +553,22 @@ public class ConsentHelperServiceTest {
         userConsentRequest.setClientId(oidcTransaction.getClientId());
         userConsentRequest.setPsuToken(oidcTransaction.getPartnerSpecificUserToken());
 
-        ConsentDetail consentDetail=new ConsentDetail();
+        ConsentDetail consentDetail = new ConsentDetail();
         consentDetail.setAcceptedClaims(Arrays.asList());
         consentDetail.setSignature("haa.naa");
 
         Mockito.when(consentService.getUserConsent(userConsentRequest)).thenReturn(Optional.of(consentDetail));
-        try{
-            consentHelperService.processConsent(oidcTransaction,true);
-            Assert.fail();
-        }catch (Exception e){
-            Assert.assertEquals(e.getMessage(),ErrorConstants.INVALID_AUTH_TOKEN);
+        try {
+            consentHelperService.processConsent(oidcTransaction, true);
+            Assertions.fail();
+        } catch (Exception e) {
+            Assertions.assertEquals(e.getMessage(), ErrorConstants.INVALID_AUTH_TOKEN);
         }
     }
 
     @Test
-    public void processConsent_withEmptyRequestedClaims_thenPass(){
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+    public void processConsent_withEmptyRequestedClaims_thenPass() {
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
         oidcTransaction.setVoluntaryClaims(List.of());
@@ -576,17 +577,17 @@ public class ConsentHelperServiceTest {
         UserConsentRequest userConsentRequest = new UserConsentRequest();
         userConsentRequest.setClientId(oidcTransaction.getClientId());
         userConsentRequest.setPsuToken(oidcTransaction.getPartnerSpecificUserToken());
-        consentHelperService.processConsent(oidcTransaction,true);
-        Assert.assertEquals(oidcTransaction.getConsentAction(),ConsentAction.NOCAPTURE);
+        consentHelperService.processConsent(oidcTransaction, true);
+        Assertions.assertEquals(oidcTransaction.getConsentAction(), ConsentAction.NOCAPTURE);
     }
 
     @Test
     public void processConsent_withExpiredConsentAndGetConsentActionAsCapture_thenPass() {
-        OIDCTransaction oidcTransaction=new OIDCTransaction();
+        OIDCTransaction oidcTransaction = new OIDCTransaction();
         oidcTransaction.setClientId("abc");
         oidcTransaction.setPartnerSpecificUserToken("123");
-        oidcTransaction.setRequestedAuthorizeScopes(List.of("openid","profile"));
-        oidcTransaction.setPermittedScopes(List.of("openid","profile"));
+        oidcTransaction.setRequestedAuthorizeScopes(List.of("openid", "profile"));
+        oidcTransaction.setPermittedScopes(List.of("openid", "profile"));
         oidcTransaction.setEssentialClaims(List.of("name"));
         oidcTransaction.setVoluntaryClaims(List.of("email"));
         oidcTransaction.setIndividualId("individualId");
@@ -598,20 +599,20 @@ public class ConsentHelperServiceTest {
         ConsentDetail consentDetail = new ConsentDetail();
         consentDetail.setClientId("123");
         consentDetail.setSignature("signature");
-        consentDetail.setAuthorizationScopes(Map.of("openid",false,"profile",false));
-        consentDetail.setAcceptedClaims(Arrays.asList("email","gender","name"));
-        consentDetail.setPermittedScopes(Arrays.asList("email","openid","profile"));
+        consentDetail.setAuthorizationScopes(Map.of("openid", false, "profile", false));
+        consentDetail.setAcceptedClaims(Arrays.asList("email", "gender", "name"));
+        consentDetail.setPermittedScopes(Arrays.asList("email", "openid", "profile"));
         consentDetail.setExpiredtimes(LocalDateTime.now(ZoneOffset.UTC).minusMinutes(2));
         consentDetail.setPsuToken("psutoken");
 
         Mockito.when(consentService.getUserConsent(userConsentRequest)).thenReturn(Optional.of(consentDetail));
-        consentHelperService.processConsent(oidcTransaction,false);
+        consentHelperService.processConsent(oidcTransaction, false);
 
-        Assert.assertEquals(oidcTransaction.getConsentAction(),ConsentAction.CAPTURE);
+        Assertions.assertEquals(oidcTransaction.getConsentAction(), ConsentAction.CAPTURE);
     }
 
 
-    private String generateSignature(Map<String,Object> payloadMap) throws Exception {
+    private String generateSignature(Map<String, Object> payloadMap) throws Exception {
 
         // Define the header and payload
         JWSHeader header = new JWSHeader.Builder(JWSAlgorithm.RS256)
@@ -622,11 +623,11 @@ public class ConsentHelperServiceTest {
 
         // Generate the JWT with a private key
         JWSSigner signer = new RSASSASigner(privateKey);
-        JWSObject jwsObject = new JWSObject(header,payload);
+        JWSObject jwsObject = new JWSObject(header, payload);
         jwsObject.sign(signer);
         String token = jwsObject.serialize();
-        String parts[]=token.split("\\.");
-        return parts[0]+"."+parts[2];
+        String parts[] = token.split("\\.");
+        return parts[0] + "." + parts[2];
     }
 
     public static String generateThumbprintByCertificate(String cerifacate)
